# my-site

./: .gitignore  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py
blog/templates/blog/post/: detail.html  list.html
config/: settings.py  urls.py
