[project]
name = "my-site"
version = "0.1.0"
description = ""
authors = [
    {name = "Justin Rentie",email = "jurentie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)"
]

[tool.poetry]
packages = [{include = "my_site", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
